--- a/index1.html
+++ b/index1.html
@@ -13,7 +13,7 @@
 
     <script>
       document.getElementById("trigger").addEventListener("click", function () {
-        window.location.href = "index.html";
+        window.location.href = "index3.html";
       });
     </script>
   </body>
